--- a/admin/assets/css/basic.css
+++ b/admin/assets/css/basic.css
@@ -108,7 +108,7 @@ body {
     }
 
 .active-menu {
-    background-color: #616563!important;
+    background-color: #00CA79!important;
 }
 .active-menu-top {
     background-color: #000!important;
@@ -184,7 +184,7 @@ body {
 }
 
 .navbar-cls-top {
-    background: #202020;
+    background: #00CA79;
     border-bottom: none;
 }
 
